k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: hotelpulse
spec:
  selector:
    matchLabels:
      app: worker
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: hotelpulse-worker:dev
          imagePullPolicy: Never
